libplog/plog/ploggrammar.output
Terminals unused in grammar

   ";"
   UBNOT
   AND


Grammar

    0 $accept: program "<EOF>"

    1 program: directives sorts_sec atts_sec stmts_sec query
    2        | directives atts_sec stmts_sec query
    3        | %empty

    4 directives: directives directive
    5           | %empty

    6 directive: const_decl

    7 const_decl: "#const" "<IDENTIFIER>" "=" constterm "."

    8 sorts_sec: SORTDEFKEYWORD sort_defs

    9 sort_defs: sort_defs sort_def
   10          | %empty

   11 sort_def: SORT_NAME "=" sort_expr "."

   12 sort_expr: range
   13          | concatenation
   14          | functional_symbol
   15          | SORT_NAME
   16          | curly_brackets
   17          | sort_expr "+" sort_expr
   18          | sort_expr "*" sort_expr
   19          | sort_expr "-" sort_expr
   20          | "(" sort_expr ")"

   21 range: constterm ".." constterm

   22 concatenation: concatenation concat_elem
   23              | concat_elem

   24 concat_elem: "[" sort_expr "]"

   25 functional_symbol: "<IDENTIFIER>" "(" sort_expr_list ")"

   26 sort_expr_list: sort_expr_list "," sort_expr
   27               | sort_expr

   28 curly_brackets: "{" constargvec "}"

   29 atts_sec: ATTDEFKEYWORD att_defs

   30 att_defs: att_defs att_def
   31         | %empty

   32 att_def: "<IDENTIFIER>" ":" sort_name_list "->" SORT_NAME
   33        | "<IDENTIFIER>" ":" SORT_NAME

   34 sort_name_list: SORT_NAME
   35               | sort_name_list "," SORT_NAME

   36 stmts_sec: STMTDEFKEYWORD stmts

   37 stmts: stmts stmt
   38      | %empty

   39 stmt: head "."
   40     | head ":-" "."
   41     | head ":-" body "."
   42     | ":-" body "."
   43     | ":-" "."

   44 head: head_atom
   45     | random_atom

   46 head_atom: "<IDENTIFIER>"
   47          | "<IDENTIFIER>" "(" termvec ")"
   48          | "<IDENTIFIER>" "(" termvec ")" "=" term
   49          | "<IDENTIFIER>" "=" term

   50 random_atom: "random" "(" "<IDENTIFIER>" "," "<IDENTIFIER>" ")"
   51            | "random" "(" "<IDENTIFIER>" ":" "{" "<VARIABLE>" ":" "<IDENTIFIER>" "(" "<VARIABLE>" ")" "}" ")"

   52 body: body "," e_literal
   53     | e_literal

   54 constterm: constterm "+" constterm
   55          | constterm "-" constterm
   56          | constterm "*" constterm
   57          | constterm "/" constterm
   58          | constterm "\\" constterm
   59          | constterm "^" constterm
   60          | "-" constterm
   61          | "<IDENTIFIER>" "(" constargvec ")"
   62          | "|" constterm "|"
   63          | "<IDENTIFIER>"
   64          | "<NUMBER>"

   65 consttermvec: constterm
   66             | consttermvec "," constterm

   67 constargvec: consttermvec
   68            | %empty

   69 term: term "-" term
   70     | term "*" term
   71     | term "/" term
   72     | term "\\" term
   73     | term "^" term
   74     | "-" term
   75     | "<IDENTIFIER>" "(" termvec ")"
   76     | "|" term "|"
   77     | "<IDENTIFIER>"
   78     | "<NUMBER>"
   79     | "<VARIABLE>"

   80 ntermvec: term
   81         | ntermvec "," term

   82 termvec: ntermvec
   83        | %empty

   84 cmp: ">"
   85    | "<"
   86    | ">="
   87    | "<="
   88    | "="
   89    | "!="

   90 literal: "<IDENTIFIER>"
   91        | "<IDENTIFIER>" "(" termvec ")"
   92        | term cmp term

   93 e_literal: literal
   94          | "not" literal

   95 stmt: "pr" "(" head_atom "|" body ")" "=" probability
   96     | "(" head_atom ")" "=" probability

   97 probability: "<NUMBER>" "/" "<NUMBER>"

   98 query: "?" literal "."


Terminals, with rules where they appear

"<EOF>" (0) 0
error (256)
SORTDEFKEYWORD (258) 8
ATTDEFKEYWORD (259) 29
STMTDEFKEYWORD (260) 36
"+" (261) 17 54
"=" (262) 7 11 48 49 88 95 96
":" (263) 32 33 51
"," (264) 26 35 50 52 66 81
"#const" (265) 7
SORT_NAME (266) 11 15 32 33 34 35
"." (267) 7 11 39 40 41 42 43 98
".." (268) 21
">=" (269) 86
"->" (270) 32
">" (271) 84
":-" (272) 40 41 42 43
"{" (273) 28 51
"[" (274) 24
"|" (275) 62 76 95
"<=" (276) 87
"(" (277) 20 25 47 48 50 51 61 75 91 95 96
"<" (278) 85
"*" (279) 18 56 70
"!=" (280) 89
"?" (281) 98
"\\" (282) 58 72
"^" (283) 59 73
"}" (284) 28 51
"]" (285) 24
"random" (286) 50 51
"pr" (287) 95
")" (288) 20 25 47 48 50 51 61 75 91 95 96
";" (289)
"/" (290) 57 71 97
"-" (291) 19 55 60 69 74
UBNOT (292)
UMINUS (293)
"<NUMBER>" (294) 64 78 97
"<IDENTIFIER>" (295) 7 25 32 33 46 47 48 49 50 51 61 63 75 77 90 91
"<VARIABLE>" (296) 51 79
"not" (297) 94
AND (298)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1 2 3, on right: 0
directives (46)
    on left: 4 5, on right: 1 2 4
directive (47)
    on left: 6, on right: 4
const_decl (48)
    on left: 7, on right: 6
sorts_sec (49)
    on left: 8, on right: 1
sort_defs (50)
    on left: 9 10, on right: 8 9
sort_def (51)
    on left: 11, on right: 9
sort_expr (52)
    on left: 12 13 14 15 16 17 18 19 20, on right: 11 17 18 19 20 24
    26 27
range (53)
    on left: 21, on right: 12
concatenation (54)
    on left: 22 23, on right: 13 22
concat_elem (55)
    on left: 24, on right: 22 23
functional_symbol (56)
    on left: 25, on right: 14
sort_expr_list (57)
    on left: 26 27, on right: 25 26
curly_brackets (58)
    on left: 28, on right: 16
atts_sec (59)
    on left: 29, on right: 1 2
att_defs (60)
    on left: 30 31, on right: 29 30
att_def (61)
    on left: 32 33, on right: 30
sort_name_list (62)
    on left: 34 35, on right: 32 35
stmts_sec (63)
    on left: 36, on right: 1 2
stmts (64)
    on left: 37 38, on right: 36 37
stmt (65)
    on left: 39 40 41 42 43 95 96, on right: 37
head (66)
    on left: 44 45, on right: 39 40 41
head_atom (67)
    on left: 46 47 48 49, on right: 44 95 96
random_atom (68)
    on left: 50 51, on right: 45
body (69)
    on left: 52 53, on right: 41 42 52 95
constterm (70)
    on left: 54 55 56 57 58 59 60 61 62 63 64, on right: 7 21 54 55
    56 57 58 59 60 62 65 66
consttermvec (71)
    on left: 65 66, on right: 66 67
constargvec (72)
    on left: 67 68, on right: 28 61
term (73)
    on left: 69 70 71 72 73 74 75 76 77 78 79, on right: 48 49 69 70
    71 72 73 74 76 80 81 92
ntermvec (74)
    on left: 80 81, on right: 81 82
termvec (75)
    on left: 82 83, on right: 47 48 75 91
cmp (76)
    on left: 84 85 86 87 88 89, on right: 92
literal (77)
    on left: 90 91 92, on right: 93 94 98
e_literal (78)
    on left: 93 94, on right: 52 53
probability (79)
    on left: 97, on right: 95 96
query (80)
    on left: 98, on right: 1 2


State 0

    0 $accept: . program "<EOF>"

    "<EOF>"   reduce using rule 3 (program)
    $default  reduce using rule 5 (directives)

    program     go to state 1
    directives  go to state 2


State 1

    0 $accept: program . "<EOF>"

    "<EOF>"  shift, and go to state 3


State 2

    1 program: directives . sorts_sec atts_sec stmts_sec query
    2        | directives . atts_sec stmts_sec query
    4 directives: directives . directive

    SORTDEFKEYWORD  shift, and go to state 4
    ATTDEFKEYWORD   shift, and go to state 5
    "#const"        shift, and go to state 6

    directive   go to state 7
    const_decl  go to state 8
    sorts_sec   go to state 9
    atts_sec    go to state 10


State 3

    0 $accept: program "<EOF>" .

    $default  accept


State 4

    8 sorts_sec: SORTDEFKEYWORD . sort_defs

    $default  reduce using rule 10 (sort_defs)

    sort_defs  go to state 11


State 5

   29 atts_sec: ATTDEFKEYWORD . att_defs

    $default  reduce using rule 31 (att_defs)

    att_defs  go to state 12


State 6

    7 const_decl: "#const" . "<IDENTIFIER>" "=" constterm "."

    "<IDENTIFIER>"  shift, and go to state 13


State 7

    4 directives: directives directive .

    $default  reduce using rule 4 (directives)


State 8

    6 directive: const_decl .

    $default  reduce using rule 6 (directive)


State 9

    1 program: directives sorts_sec . atts_sec stmts_sec query

    ATTDEFKEYWORD  shift, and go to state 5

    atts_sec  go to state 14


State 10

    2 program: directives atts_sec . stmts_sec query

    STMTDEFKEYWORD  shift, and go to state 15

    stmts_sec  go to state 16


State 11

    8 sorts_sec: SORTDEFKEYWORD sort_defs .
    9 sort_defs: sort_defs . sort_def

    SORT_NAME  shift, and go to state 17

    $default  reduce using rule 8 (sorts_sec)

    sort_def  go to state 18


State 12

   29 atts_sec: ATTDEFKEYWORD att_defs .
   30 att_defs: att_defs . att_def

    "<IDENTIFIER>"  shift, and go to state 19

    $default  reduce using rule 29 (atts_sec)

    att_def  go to state 20


State 13

    7 const_decl: "#const" "<IDENTIFIER>" . "=" constterm "."

    "="  shift, and go to state 21


State 14

    1 program: directives sorts_sec atts_sec . stmts_sec query

    STMTDEFKEYWORD  shift, and go to state 15

    stmts_sec  go to state 22


State 15

   36 stmts_sec: STMTDEFKEYWORD . stmts

    $default  reduce using rule 38 (stmts)

    stmts  go to state 23


State 16

    2 program: directives atts_sec stmts_sec . query

    "?"  shift, and go to state 24

    query  go to state 25


State 17

   11 sort_def: SORT_NAME . "=" sort_expr "."

    "="  shift, and go to state 26


State 18

    9 sort_defs: sort_defs sort_def .

    $default  reduce using rule 9 (sort_defs)


State 19

   32 att_def: "<IDENTIFIER>" . ":" sort_name_list "->" SORT_NAME
   33        | "<IDENTIFIER>" . ":" SORT_NAME

    ":"  shift, and go to state 27


State 20

   30 att_defs: att_defs att_def .

    $default  reduce using rule 30 (att_defs)


State 21

    7 const_decl: "#const" "<IDENTIFIER>" "=" . constterm "."

    "|"             shift, and go to state 28
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 31

    constterm  go to state 32


State 22

    1 program: directives sorts_sec atts_sec stmts_sec . query

    "?"  shift, and go to state 24

    query  go to state 33


State 23

   36 stmts_sec: STMTDEFKEYWORD stmts .
   37 stmts: stmts . stmt

    ":-"            shift, and go to state 34
    "("             shift, and go to state 35
    "random"        shift, and go to state 36
    "pr"            shift, and go to state 37
    "<IDENTIFIER>"  shift, and go to state 38

    $default  reduce using rule 36 (stmts_sec)

    stmt         go to state 39
    head         go to state 40
    head_atom    go to state 41
    random_atom  go to state 42


State 24

   98 query: "?" . literal "."

    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 46
    "<VARIABLE>"    shift, and go to state 47

    term     go to state 48
    literal  go to state 49


State 25

    2 program: directives atts_sec stmts_sec query .

    $default  reduce using rule 2 (program)


State 26

   11 sort_def: SORT_NAME "=" . sort_expr "."

    SORT_NAME       shift, and go to state 50
    "{"             shift, and go to state 51
    "["             shift, and go to state 52
    "|"             shift, and go to state 28
    "("             shift, and go to state 53
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 54

    sort_expr          go to state 55
    range              go to state 56
    concatenation      go to state 57
    concat_elem        go to state 58
    functional_symbol  go to state 59
    curly_brackets     go to state 60
    constterm          go to state 61


State 27

   32 att_def: "<IDENTIFIER>" ":" . sort_name_list "->" SORT_NAME
   33        | "<IDENTIFIER>" ":" . SORT_NAME

    SORT_NAME  shift, and go to state 62

    sort_name_list  go to state 63


State 28

   62 constterm: "|" . constterm "|"

    "|"             shift, and go to state 28
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 31

    constterm  go to state 64


State 29

   60 constterm: "-" . constterm

    "|"             shift, and go to state 28
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 31

    constterm  go to state 65


State 30

   64 constterm: "<NUMBER>" .

    $default  reduce using rule 64 (constterm)


State 31

   61 constterm: "<IDENTIFIER>" . "(" constargvec ")"
   63          | "<IDENTIFIER>" .

    "("  shift, and go to state 66

    $default  reduce using rule 63 (constterm)


State 32

    7 const_decl: "#const" "<IDENTIFIER>" "=" constterm . "."
   54 constterm: constterm . "+" constterm
   55          | constterm . "-" constterm
   56          | constterm . "*" constterm
   57          | constterm . "/" constterm
   58          | constterm . "\\" constterm
   59          | constterm . "^" constterm

    "+"   shift, and go to state 67
    "."   shift, and go to state 68
    "*"   shift, and go to state 69
    "\\"  shift, and go to state 70
    "^"   shift, and go to state 71
    "/"   shift, and go to state 72
    "-"   shift, and go to state 73


State 33

    1 program: directives sorts_sec atts_sec stmts_sec query .

    $default  reduce using rule 1 (program)


State 34

   42 stmt: ":-" . body "."
   43     | ":-" . "."

    "."             shift, and go to state 74
    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 46
    "<VARIABLE>"    shift, and go to state 47
    "not"           shift, and go to state 75

    body       go to state 76
    term       go to state 48
    literal    go to state 77
    e_literal  go to state 78


State 35

   96 stmt: "(" . head_atom ")" "=" probability

    "<IDENTIFIER>"  shift, and go to state 38

    head_atom  go to state 79


State 36

   50 random_atom: "random" . "(" "<IDENTIFIER>" "," "<IDENTIFIER>" ")"
   51            | "random" . "(" "<IDENTIFIER>" ":" "{" "<VARIABLE>" ":" "<IDENTIFIER>" "(" "<VARIABLE>" ")" "}" ")"

    "("  shift, and go to state 80


State 37

   95 stmt: "pr" . "(" head_atom "|" body ")" "=" probability

    "("  shift, and go to state 81


State 38

   46 head_atom: "<IDENTIFIER>" .
   47          | "<IDENTIFIER>" . "(" termvec ")"
   48          | "<IDENTIFIER>" . "(" termvec ")" "=" term
   49          | "<IDENTIFIER>" . "=" term

    "="  shift, and go to state 82
    "("  shift, and go to state 83

    $default  reduce using rule 46 (head_atom)


State 39

   37 stmts: stmts stmt .

    $default  reduce using rule 37 (stmts)


State 40

   39 stmt: head . "."
   40     | head . ":-" "."
   41     | head . ":-" body "."

    "."   shift, and go to state 84
    ":-"  shift, and go to state 85


State 41

   44 head: head_atom .

    $default  reduce using rule 44 (head)


State 42

   45 head: random_atom .

    $default  reduce using rule 45 (head)


State 43

   76 term: "|" . term "|"

    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 86
    "<VARIABLE>"    shift, and go to state 47

    term  go to state 87


State 44

   74 term: "-" . term

    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 86
    "<VARIABLE>"    shift, and go to state 47

    term  go to state 88


State 45

   78 term: "<NUMBER>" .

    $default  reduce using rule 78 (term)


State 46

   75 term: "<IDENTIFIER>" . "(" termvec ")"
   77     | "<IDENTIFIER>" .
   90 literal: "<IDENTIFIER>" .
   91        | "<IDENTIFIER>" . "(" termvec ")"

    "("  shift, and go to state 89

    ","       reduce using rule 90 (literal)
    "."       reduce using rule 90 (literal)
    ")"       reduce using rule 90 (literal)
    $default  reduce using rule 77 (term)


State 47

   79 term: "<VARIABLE>" .

    $default  reduce using rule 79 (term)


State 48

   69 term: term . "-" term
   70     | term . "*" term
   71     | term . "/" term
   72     | term . "\\" term
   73     | term . "^" term
   92 literal: term . cmp term

    "="   shift, and go to state 90
    ">="  shift, and go to state 91
    ">"   shift, and go to state 92
    "<="  shift, and go to state 93
    "<"   shift, and go to state 94
    "*"   shift, and go to state 95
    "!="  shift, and go to state 96
    "\\"  shift, and go to state 97
    "^"   shift, and go to state 98
    "/"   shift, and go to state 99
    "-"   shift, and go to state 100

    cmp  go to state 101


State 49

   98 query: "?" literal . "."

    "."  shift, and go to state 102


State 50

   15 sort_expr: SORT_NAME .

    $default  reduce using rule 15 (sort_expr)


State 51

   28 curly_brackets: "{" . constargvec "}"

    "|"             shift, and go to state 28
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 31

    $default  reduce using rule 68 (constargvec)

    constterm     go to state 103
    consttermvec  go to state 104
    constargvec   go to state 105


State 52

   24 concat_elem: "[" . sort_expr "]"

    SORT_NAME       shift, and go to state 50
    "{"             shift, and go to state 51
    "["             shift, and go to state 52
    "|"             shift, and go to state 28
    "("             shift, and go to state 53
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 54

    sort_expr          go to state 106
    range              go to state 56
    concatenation      go to state 57
    concat_elem        go to state 58
    functional_symbol  go to state 59
    curly_brackets     go to state 60
    constterm          go to state 61


State 53

   20 sort_expr: "(" . sort_expr ")"

    SORT_NAME       shift, and go to state 50
    "{"             shift, and go to state 51
    "["             shift, and go to state 52
    "|"             shift, and go to state 28
    "("             shift, and go to state 53
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 54

    sort_expr          go to state 107
    range              go to state 56
    concatenation      go to state 57
    concat_elem        go to state 58
    functional_symbol  go to state 59
    curly_brackets     go to state 60
    constterm          go to state 61


State 54

   25 functional_symbol: "<IDENTIFIER>" . "(" sort_expr_list ")"
   61 constterm: "<IDENTIFIER>" . "(" constargvec ")"
   63          | "<IDENTIFIER>" .

    "("  shift, and go to state 108

    $default  reduce using rule 63 (constterm)


State 55

   11 sort_def: SORT_NAME "=" sort_expr . "."
   17 sort_expr: sort_expr . "+" sort_expr
   18          | sort_expr . "*" sort_expr
   19          | sort_expr . "-" sort_expr

    "+"  shift, and go to state 109
    "."  shift, and go to state 110
    "*"  shift, and go to state 111
    "-"  shift, and go to state 112


State 56

   12 sort_expr: range .

    $default  reduce using rule 12 (sort_expr)


State 57

   13 sort_expr: concatenation .
   22 concatenation: concatenation . concat_elem

    "["  shift, and go to state 52

    $default  reduce using rule 13 (sort_expr)

    concat_elem  go to state 113


State 58

   23 concatenation: concat_elem .

    $default  reduce using rule 23 (concatenation)


State 59

   14 sort_expr: functional_symbol .

    $default  reduce using rule 14 (sort_expr)


State 60

   16 sort_expr: curly_brackets .

    $default  reduce using rule 16 (sort_expr)


State 61

   21 range: constterm . ".." constterm
   54 constterm: constterm . "+" constterm
   55          | constterm . "-" constterm
   56          | constterm . "*" constterm
   57          | constterm . "/" constterm
   58          | constterm . "\\" constterm
   59          | constterm . "^" constterm

    "+"   shift, and go to state 67
    ".."  shift, and go to state 114
    "*"   shift, and go to state 69
    "\\"  shift, and go to state 70
    "^"   shift, and go to state 71
    "/"   shift, and go to state 72
    "-"   shift, and go to state 73


State 62

   33 att_def: "<IDENTIFIER>" ":" SORT_NAME .
   34 sort_name_list: SORT_NAME .

    ","       reduce using rule 34 (sort_name_list)
    "->"      reduce using rule 34 (sort_name_list)
    $default  reduce using rule 33 (att_def)


State 63

   32 att_def: "<IDENTIFIER>" ":" sort_name_list . "->" SORT_NAME
   35 sort_name_list: sort_name_list . "," SORT_NAME

    ","   shift, and go to state 115
    "->"  shift, and go to state 116


State 64

   54 constterm: constterm . "+" constterm
   55          | constterm . "-" constterm
   56          | constterm . "*" constterm
   57          | constterm . "/" constterm
   58          | constterm . "\\" constterm
   59          | constterm . "^" constterm
   62          | "|" constterm . "|"

    "+"   shift, and go to state 67
    "|"   shift, and go to state 117
    "*"   shift, and go to state 69
    "\\"  shift, and go to state 70
    "^"   shift, and go to state 71
    "/"   shift, and go to state 72
    "-"   shift, and go to state 73


State 65

   54 constterm: constterm . "+" constterm
   55          | constterm . "-" constterm
   56          | constterm . "*" constterm
   57          | constterm . "/" constterm
   58          | constterm . "\\" constterm
   59          | constterm . "^" constterm
   60          | "-" constterm .

    $default  reduce using rule 60 (constterm)


State 66

   61 constterm: "<IDENTIFIER>" "(" . constargvec ")"

    "|"             shift, and go to state 28
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 31

    $default  reduce using rule 68 (constargvec)

    constterm     go to state 103
    consttermvec  go to state 104
    constargvec   go to state 118


State 67

   54 constterm: constterm "+" . constterm

    "|"             shift, and go to state 28
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 31

    constterm  go to state 119


State 68

    7 const_decl: "#const" "<IDENTIFIER>" "=" constterm "." .

    $default  reduce using rule 7 (const_decl)


State 69

   56 constterm: constterm "*" . constterm

    "|"             shift, and go to state 28
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 31

    constterm  go to state 120


State 70

   58 constterm: constterm "\\" . constterm

    "|"             shift, and go to state 28
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 31

    constterm  go to state 121


State 71

   59 constterm: constterm "^" . constterm

    "|"             shift, and go to state 28
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 31

    constterm  go to state 122


State 72

   57 constterm: constterm "/" . constterm

    "|"             shift, and go to state 28
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 31

    constterm  go to state 123


State 73

   55 constterm: constterm "-" . constterm

    "|"             shift, and go to state 28
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 31

    constterm  go to state 124


State 74

   43 stmt: ":-" "." .

    $default  reduce using rule 43 (stmt)


State 75

   94 e_literal: "not" . literal

    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 46
    "<VARIABLE>"    shift, and go to state 47

    term     go to state 48
    literal  go to state 125


State 76

   42 stmt: ":-" body . "."
   52 body: body . "," e_literal

    ","  shift, and go to state 126
    "."  shift, and go to state 127


State 77

   93 e_literal: literal .

    $default  reduce using rule 93 (e_literal)


State 78

   53 body: e_literal .

    $default  reduce using rule 53 (body)


State 79

   96 stmt: "(" head_atom . ")" "=" probability

    ")"  shift, and go to state 128


State 80

   50 random_atom: "random" "(" . "<IDENTIFIER>" "," "<IDENTIFIER>" ")"
   51            | "random" "(" . "<IDENTIFIER>" ":" "{" "<VARIABLE>" ":" "<IDENTIFIER>" "(" "<VARIABLE>" ")" "}" ")"

    "<IDENTIFIER>"  shift, and go to state 129


State 81

   95 stmt: "pr" "(" . head_atom "|" body ")" "=" probability

    "<IDENTIFIER>"  shift, and go to state 38

    head_atom  go to state 130


State 82

   49 head_atom: "<IDENTIFIER>" "=" . term

    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 86
    "<VARIABLE>"    shift, and go to state 47

    term  go to state 131


State 83

   47 head_atom: "<IDENTIFIER>" "(" . termvec ")"
   48          | "<IDENTIFIER>" "(" . termvec ")" "=" term

    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 86
    "<VARIABLE>"    shift, and go to state 47

    $default  reduce using rule 83 (termvec)

    term      go to state 132
    ntermvec  go to state 133
    termvec   go to state 134


State 84

   39 stmt: head "." .

    $default  reduce using rule 39 (stmt)


State 85

   40 stmt: head ":-" . "."
   41     | head ":-" . body "."

    "."             shift, and go to state 135
    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 46
    "<VARIABLE>"    shift, and go to state 47
    "not"           shift, and go to state 75

    body       go to state 136
    term       go to state 48
    literal    go to state 77
    e_literal  go to state 78


State 86

   75 term: "<IDENTIFIER>" . "(" termvec ")"
   77     | "<IDENTIFIER>" .

    "("  shift, and go to state 137

    $default  reduce using rule 77 (term)


State 87

   69 term: term . "-" term
   70     | term . "*" term
   71     | term . "/" term
   72     | term . "\\" term
   73     | term . "^" term
   76     | "|" term . "|"

    "|"   shift, and go to state 138
    "*"   shift, and go to state 95
    "\\"  shift, and go to state 97
    "^"   shift, and go to state 98
    "/"   shift, and go to state 99
    "-"   shift, and go to state 100


State 88

   69 term: term . "-" term
   70     | term . "*" term
   71     | term . "/" term
   72     | term . "\\" term
   73     | term . "^" term
   74     | "-" term .

    $default  reduce using rule 74 (term)


State 89

   75 term: "<IDENTIFIER>" "(" . termvec ")"
   91 literal: "<IDENTIFIER>" "(" . termvec ")"

    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 86
    "<VARIABLE>"    shift, and go to state 47

    $default  reduce using rule 83 (termvec)

    term      go to state 132
    ntermvec  go to state 133
    termvec   go to state 139


State 90

   88 cmp: "=" .

    $default  reduce using rule 88 (cmp)


State 91

   86 cmp: ">=" .

    $default  reduce using rule 86 (cmp)


State 92

   84 cmp: ">" .

    $default  reduce using rule 84 (cmp)


State 93

   87 cmp: "<=" .

    $default  reduce using rule 87 (cmp)


State 94

   85 cmp: "<" .

    $default  reduce using rule 85 (cmp)


State 95

   70 term: term "*" . term

    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 86
    "<VARIABLE>"    shift, and go to state 47

    term  go to state 140


State 96

   89 cmp: "!=" .

    $default  reduce using rule 89 (cmp)


State 97

   72 term: term "\\" . term

    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 86
    "<VARIABLE>"    shift, and go to state 47

    term  go to state 141


State 98

   73 term: term "^" . term

    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 86
    "<VARIABLE>"    shift, and go to state 47

    term  go to state 142


State 99

   71 term: term "/" . term

    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 86
    "<VARIABLE>"    shift, and go to state 47

    term  go to state 143


State 100

   69 term: term "-" . term

    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 86
    "<VARIABLE>"    shift, and go to state 47

    term  go to state 144


State 101

   92 literal: term cmp . term

    "|"             shift, and go to state 43
    "-"             shift, and go to state 44
    "<NUMBER>"      shift, and go to state 45
    "<IDENTIFIER>"  shift, and go to state 86
    "<VARIABLE>"    shift, and go to state 47

    term  go to state 145


State 102

   98 query: "?" literal "." .

    $default  reduce using rule 98 (query)


State 103

   54 constterm: constterm . "+" constterm
   55          | constterm . "-" constterm
   56          | constterm . "*" constterm
   57          | constterm . "/" constterm
   58          | constterm . "\\" constterm
   59          | constterm . "^" constterm
   65 consttermvec: constterm .

    "+"   shift, and go to state 67
    "*"   shift, and go to state 69
    "\\"  shift, and go to state 70
    "^"   shift, and go to state 71
    "/"   shift, and go to state 72
    "-"   shift, and go to state 73

    $default  reduce using rule 65 (consttermvec)


State 104

   66 consttermvec: consttermvec . "," constterm
   67 constargvec: consttermvec .

    ","  shift, and go to state 146

    $default  reduce using rule 67 (constargvec)


State 105

   28 curly_brackets: "{" constargvec . "}"

    "}"  shift, and go to state 147


State 106

   17 sort_expr: sort_expr . "+" sort_expr
   18          | sort_expr . "*" sort_expr
   19          | sort_expr . "-" sort_expr
   24 concat_elem: "[" sort_expr . "]"

    "+"  shift, and go to state 109
    "*"  shift, and go to state 111
    "]"  shift, and go to state 148
    "-"  shift, and go to state 112


State 107

   17 sort_expr: sort_expr . "+" sort_expr
   18          | sort_expr . "*" sort_expr
   19          | sort_expr . "-" sort_expr
   20          | "(" sort_expr . ")"

    "+"  shift, and go to state 109
    "*"  shift, and go to state 111
    ")"  shift, and go to state 149
    "-"  shift, and go to state 112


State 108

   25 functional_symbol: "<IDENTIFIER>" "(" . sort_expr_list ")"
   61 constterm: "<IDENTIFIER>" "(" . constargvec ")"

    SORT_NAME       shift, and go to state 50
    "{"             shift, and go to state 51
    "["             shift, and go to state 52
    "|"             shift, and go to state 28
    "("             shift, and go to state 53
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 54

    $default  reduce using rule 68 (constargvec)

    sort_expr          go to state 150
    range              go to state 56
    concatenation      go to state 57
    concat_elem        go to state 58
    functional_symbol  go to state 59
    sort_expr_list     go to state 151
    curly_brackets     go to state 60
    constterm          go to state 152
    consttermvec       go to state 104
    constargvec        go to state 118


State 109

   17 sort_expr: sort_expr "+" . sort_expr

    SORT_NAME       shift, and go to state 50
    "{"             shift, and go to state 51
    "["             shift, and go to state 52
    "|"             shift, and go to state 28
    "("             shift, and go to state 53
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 54

    sort_expr          go to state 153
    range              go to state 56
    concatenation      go to state 57
    concat_elem        go to state 58
    functional_symbol  go to state 59
    curly_brackets     go to state 60
    constterm          go to state 61


State 110

   11 sort_def: SORT_NAME "=" sort_expr "." .

    $default  reduce using rule 11 (sort_def)


State 111

   18 sort_expr: sort_expr "*" . sort_expr

    SORT_NAME       shift, and go to state 50
    "{"             shift, and go to state 51
    "["             shift, and go to state 52
    "|"             shift, and go to state 28
    "("             shift, and go to state 53
    "-"             shift, and go to state 29
    "<NUMBER>"      shift, and go to state 30
    "<IDENTIFIER>"  shift, and go to state 54

    sort_expr          go to state 154
    range              go to state 56
    concatenation      go to state 57
    concat_elem        go to state 58
    functional_symbol  go to state 59
    curly_brackets     go to state 60
    constterm          go to state 61


State 112
